// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render customers 1`] = `
<ListOfCustomers
  customers={
    Array [
      Object {
        "name": "Bob",
      },
      Object {
        "name": "Joanna",
      },
    ]
  }
/>
`;

exports[`should render no customers 1`] = `<NoCustomers />`;

exports[`should respond to store updates 1`] = `<NoCustomers />`;

exports[`should respond to store updates 2`] = `
<ListOfCustomers
  customers={
    Array [
      Object {
        "name": "Jill",
      },
      Object {
        "name": "Fred",
      },
    ]
  }
/>
`;
